--- a/render.yaml
+++ b/render.yaml
@@ -1,33 +1,17 @@
 databases:
   # 1. O Banco de Dados PostgreSQL
   - name: motorotas-db
-    plan: free # Usa o plano gratuito do Render para o banco de dados
+    plan: free
 
 services:
-  # 2. A API Web (api.py)
-  - name: motorotas-api
+  # 2. Nosso Serviço Web ÚNICO
+  # Ele serve a API e roda os scripts de fundo como threads.
+  - name: motorotas-app
     type: web
-    plan: free # Usa o plano gratuito para o serviço web
-    env: python
-    buildCommand: "./build.sh"
-    startCommand: "gunicorn api:app"
-    envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: motorotas-db
-          property: connectionString
-      - key: IFOOD_CLIENT_ID
-        sync: false # Você vai preencher isso manualmente no dashboard do Render
-      - key: IFOOD_CLIENT_SECRET
-        sync: false # Você vai preencher isso manualmente no dashboard do Render
-
-  # 3. O Coletor de Pedidos (main.py)
-  - name: motorotas-collector
-    type: worker # "Worker" é um script que roda em loop no fundo
     plan: free
     env: python
     buildCommand: "./build.sh"
-    startCommand: "python main.py"
+    startCommand: "gunicorn app:app --timeout 120"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -37,20 +21,17 @@ services:
         sync: false
       - key: IFOOD_CLIENT_SECRET
         sync: false
+```
 
-  # 4. O Processador de Rotas (process_routes.py)
-  - name: motorotas-processor
-    type: worker
-    plan: free
-    env: python
-    buildCommand: "./build.sh"
-    startCommand: "python process_routes.py"
-    envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: motorotas-db
-          property: connectionString
-      - key: IFOOD_CLIENT_ID # Otimizador pode precisar de chaves no futuro
-        sync: false
-      - key: IFOOD_CLIENT_SECRET
-        sync: false
+### O Que Fazer Agora (Passo a Passo)
+
+1.  **Limpeza:** Delete os arquivos `api.py`, `main.py`, e `process_routes.py` do seu projeto.
+2.  **Criação:** Crie os novos arquivos `app.py`, `collector.py`, e `processor.py` e cole o conteúdo correspondente.
+3.  **Atualização:** Substitua o conteúdo do seu `render.yaml` pelo novo código simplificado.
+4.  **Commit e Push:** Envie todas essas alterações para a sua branch `api-test` no GitHub.
+    ```bash
+    git add .
+    git commit -m "refactor: Unifica aplicação para deploy no Render"
+    git push
+    
+
